--- a/travlr/package.json
+++ b/travlr/package.json
@@ -7,6 +7,7 @@
     "seed": "node ./seeds/seed.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
